app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs-app
  namespace: app
  labels:
    app: seaweedfs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweedfs-app
  template:
    metadata:
      labels:
        app: seaweedfs-app
    spec:
      containers:
      - name: seaweedfs-app
        image: ghcr.io/randsw/k8s-seaweedfs:latest
        ports:
        - containerPort: 8080
