app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-app-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - host: app.kind.cluster
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: seaweedfs-app-service
              port:
                number: 80
